@@ -1,2 +1,1 @@
-DIST morituri-0.2.2.tar.bz2 257115 SHA256 983ef14f9e984128dfdb48c92375a5951dbc1c8a3fc1f438ce64a75a1dd249c6 SHA512 0c4d00719049135cedb9d9081b84d391fab2dde89588ec76efa7736266ea85b93daddf6c4738d0b994de121a5d0fbebbc94431f3e22c25f86fb2c50154532dce WHIRLPOOL 707cad48569dec239bfd733efd60813136c6d6916b0a033daebb7c673f398169844b7f278ff45ff4b9b4e22e38695756607074824dc5f72ce74c8e5fadde62be
 DIST morituri-0.2.3.tar.bz2 265302 SHA256 20884da088392e8c2e89dda962e78714689ff80b8066fd2301f42be4835e60ac SHA512 35f734c90412765e74ef2a61a0ff30d1a783b5fc3e1c24a8cdf5a29bcde719cf775cf98110bb05a77f1d0e49566825f890db9b2cd7668099303450ef6913d556 WHIRLPOOL f04f673044a128a6f8dd02d1da40d24510c90443f0e67574d379d2323c50fa08e73b49119824ea1c4157647295faebfd9a2af2f3d4bfba522f5d693eb167436f
