@@ -9,31 +9,32 @@ PYTHON_COMPAT="python2_7"
 inherit bash-completion-r1 python-single-r1
 
 DESCRIPTION="CD ripper aiming for accuracy over speed."
-HOMEPAGE="http://thomas.apestaart.org/morituri/trac/wiki"
+HOMEPAGE="https://thomas.apestaart.org/morituri/trac/"
 SRC_URI="http://thomas.apestaart.org/download/morituri/${P}.tar.bz2"
 
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="alac cdio +cddb +flac wav wavpack"
+IUSE=""
+RESTRICT="test"
 
 DEPEND="${PYTHON_DEPS}"
 RDEPEND="${DEPEND}
-	media-sound/cdparanoia
 	app-cdr/cdrdao
-	media-libs/gstreamer:0.10
-	media-libs/gst-plugins-base:0.10
-	alac? ( media-plugins/gst-plugins-ffmpeg:0.10 )
-	cdio? ( dev-python/pycdio )
-	cddb? ( dev-python/cddb-py )
-	flac? ( media-plugins/gst-plugins-flac:0.10 )
-	wav? ( media-libs/gst-plugins-good:0.10 )
-	wavpack? ( media-plugins/gst-plugins-wavpack:0.10 )
+	dev-python/pycdio
+	dev-python/cddb-py
 	dev-python/gst-python:0.10[${PYTHON_USEDEP}]
 	dev-python/python-musicbrainz[${PYTHON_USEDEP}]
 	dev-python/pygobject[${PYTHON_USEDEP}]
 	dev-python/pygtk[${PYTHON_USEDEP}]
-	dev-python/pyxdg[${PYTHON_USEDEP}]"
+	dev-python/pyxdg[${PYTHON_USEDEP}]
+	media-plugins/gst-plugins-meta:0.10[ffmpeg,flac,lame,vorbis,wavpack]
+	media-sound/cdparanoia"
+
+src_configure() {
+	# disable doc and test
+	ac_cv_prog_EPYDOC="" ac_cv_prog_PYCHECKER="" econf
+}
 
 src_install() {
 	emake DESTDIR="${D}" completiondir="$(get_bashcompdir)" install
